--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
     <title>Michelle Challenge 18</title>
   <link rel="stylesheet" href="css/styles.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
  <header>
     <img src="./images/mp-logo-official.png" class="logo" alt="Michelle Polo Logo">
   <nav>
     <div>
-      <p id="skillsNav">Skills</p>
+      <p id="skillsNav"><a href="#mySkills-container">Skills</a></p>
       <p id="storyNav">Story</p>
     </div>
     <div>
-      <p id="contactNav">Contact</p>
-      <p id="workNav">Work</p>
+      <p id="contactNav"><a href="#contact-container">Contact</a></p>
+      <p id="workNav"><a href="#myWork-container">Work</a></p>
     </div>
   </nav> 
 </header>
@@ -29,7 +30,8 @@
   </div>
   <div class="center">
     <button>Download Resume</button>
-</section>
+  </section>
+
 
 <section class="me">
   <div class="grid-container">
@@ -59,7 +61,8 @@
   </div>
 </section>
 
-<section>
+<section id="mySkills-container" class="mySkillSection">
+  <h1>My SKills</h1>
   <table class="toolstable">
     <tr>
       <td class="information" width="40%"><h2>Information Architecture</h2></td>
@@ -74,7 +77,7 @@
   </table>
 </section>
 
-<section id="toolsiknow">
+<section id="toolsiknow-container" class="toolsiknow-container">
   <div>
    <h1 class="tools">Tools I Know</h1>
    <div class="flexcontainer">
@@ -110,7 +113,7 @@
    </div></div>
 </section>
 
-<section class="mywork">
+<section id="myWork-container" class="myWork-container">
   <h1>My Work</h1>
    <div class="projects">
     <div class="projectsimage">
@@ -134,7 +137,7 @@
   </div>
 </section>
 
-  <section id="personalcontact">
+<section id="contact-container" class="contact-container">
     <div>
       <h1>Contact</h1> 
     </div>
@@ -157,6 +160,15 @@
 <section class="letsconnect">
       <h2>Let's connect</h2>
       <p>Get in touch for opportunities or just to say hi!</p>
+      <button id="cta-button">Contact Me</button>
+      <div class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <h2>Contact Me</h2>
+          <p>Hi! Thank you so much for your interest. <br>Feel free to scan this QR Code and send me a text!</br></p>
+          <img src="./images/wa.link_x7s3sd.png">
+        </div>
+      </div>
 </section>
 
 <footer>
@@ -177,4 +189,7 @@
   <p>Created and designed by Michelle Polo</p>
 </footer>
 </body>
+<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+<script src="js/script.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </html>
