--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Michelle Challenge 18</title>
+    <title>Michelle Challenge 19</title>
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
@@ -97,6 +97,7 @@
      <img src="./images/Adobe_After_Effects_CC_iconaftereffectslogo.png">
    </div>
   </div>
+  
   <div class="flexcontainer">
     <div class="icons">
     <img src="./images/Adobe_Photoshop_Lightroom_CC_logolightroom.png">
@@ -110,7 +111,22 @@
      <div class="icons">
        <img src="./images/1656733637logo-canva-png (1)canvas.png">
     </div>
-   </div></div>
+   </div>
+   
+   <div class="flexcontainer">
+    <div class="icons">
+    <img src="./images/HTML LOGO.png">
+     </div>
+     <div class="icons">
+      <img src="./images/CSS3.png">
+    </div>
+    <div class="icons">
+      <img src="./images/JS LOGO.png">
+    </div>
+     <div class="icons">
+       <img src="./images/pngwing.com.png">
+    </div>
+   </div>
 </section>
 
 <section id="myWork-container" class="myWork-container">
